# Trinity

./: .gitignore  3d_large_data.txt  4d_test.txt  CMakeLists.txt  CMakeLists_w_gprof.txt  CMakeLists_without_gprof.txt  README.md  README_prog.md  a.out  bitmap.h  cmake_verbose  datasets  find_cdf.py  hello_test.cc  initialize_node.sh  input.txt  kill_virus.sh  microbench_output  paper_2d_test.txt  setup.sh  test  test.cpp  test_thrift.sh  test_trie.sh  tests  tests.cpp  thrift_start_server.sh  trie.c  trie.cpp  trie.h  trie.hpp  trie_with_pair.c  trie_with_pair.h
artifact_eval/: github_insert_micro,SM  github_insert_micro_CN  github_lookup_micro,SM  github_query_micro,SM  nyc_insert_micro  nyc_insert_micro,SM  nyc_lookup_micro,SM  nyc_query_micro,SM  tpch_insert_dimensions_sensitivity_5  tpch_insert_micro,SM  tpch_insert_microB,B  tpch_lookup_micro,SM  tpch_lookup_microB,B  tpch_query_dimensions_sensitivity_9  tpch_query_micro,SM  tpch_query_microB,B  tpch_query_micro_CN  tpch_query_selectivity_sensitivity  tpch_storage_micro_CN
cmake-modules/: AddCompilerFlag.cmake  BoostExternal.cmake  BuildOptions.cmake  CatchExternal.cmake  CheckCCompilerFlag.cmake  CheckCXXCompilerFlag.cmake  Dependencies.cmake  JemallocExternal.cmake  OptimizeForArchitecture.cmake  ThriftExternal.cmake
data/: readme.md
datasets/: download_nytaxi.sh  github_dataset.csv  github_split  nyc_dataset.csv  nyc_split  process_nyc.py  process_osm.py  process_tpch.py  rename_tpch_300.sh  split_github.sh  split_nyc.sh  split_tpch.sh  tpch_dataset.csv  tpch_split  truncate_nyc.py  truncate_tpch.py
k2-trie-with-comments/: README.md  a.out  treeBlock.c  treeBlock.h
libmdtrie/: CMakeLists.txt
libmdtrie/bench/: benchmark.hpp  common.h  common.hpp  concurrency_bench.cpp  delta_encoded_bench.cpp  dimension.cpp  example.cpp  fs_bench.cpp  github_bench.cpp  github_optimization.cpp  mdtrie_bench.cpp  microbench.cpp  nyc_bench.cpp  nyc_optimization.cpp  osm_bench.cpp  osm_dataset_bench.cpp  parser.hpp  random.csv  range_search_bench.cpp  range_search_osm_phtree_selectivity_query.csv  sample_dataset_bench.cpp  self_index_bench.cpp  sensitivity_num_dimensions.cpp  sensitivity_query_selectivity.cpp  tpch_bench.cpp  tpch_bench_dataset_sensitivity.cpp  tpch_bench_dimension_sensitivity.cpp  tpch_bench_query_selectivity.cpp  tpch_bench_sensitivity.cpp  tpch_optimization.cpp  treeBlock_no_table.cpp  treeBlock_orig.cpp  treeBlock_orig.h  trie_one_dimension_bench.cpp
libmdtrie/bench/data/: sample.txt.length
libmdtrie/src/: README.md  bimap.h  bit_vector.h  bitmap.h  bitmap_array.h  compact_ptr.h  compact_vector.h  compressed_bitmap.h  data_point.cpp  data_point.h  defs.h  delta_encoded_array.h  elias_gamma_encoder.h  point_array.h  rand_utils.h  tqdm.h  treeBlock_orig.h  tree_block.cpp  tree_block.h  trie.cpp  trie.h  trie_node.cpp  trie_node.h  utils.h
libmdtrie/test/: elias_gamma_encoder_test.cpp  mdtrie_concurrency_test.cpp  mdtrie_lookup_test.cpp  mdtrie_test.cpp  range_search_test.cpp
librpc/: CMakeLists.txt
librpc/src/: CMakeCache.txt  MDTrieShard.cpp  MDTrieShard.h  MDTrieShard.tcc  MDTrieShardClient.cpp  MDTrieShardClient.h  MDTrieShardServer.cpp  MDTrieShardTest.cpp  SharedService.cpp  SharedService.h  SharedService.tcc  TrinityBenchShared.h  TrinityFS.cpp  TrinityGithub.cpp  TrinityGithubInsert.cpp  TrinityGithubLookup.cpp  TrinityGithubQuery.cpp  TrinityGithubStorage.cpp  TrinityInsertionLookupLatency.cpp  TrinityNYC.cpp  TrinityNYCInsert.cpp  TrinityNYCLookup.cpp  TrinityNYCQuery.cpp  TrinityNewBench.h  TrinityOSM.cpp  TrinityParseFIle.h  TrinityParseFile.h  TrinityStorage.cpp  TrinityTPCH.cpp  TrinityTPCHInsert.cpp  TrinityTPCHInsertLookup.cpp  TrinityTPCHInsertQuery.cpp  TrinityTPCHLookup.cpp  TrinityTPCHMacro.cpp  TrinityTPCHQuery.cpp  benchmark.hpp  rpc_types.h  rpc_types.tcc  shared_types.cpp  shared_types.h  (+1 more)
mdtrie_plots/: aerospike_macro.sh  bar-chart-query.py  bar-chart2.py  insertion_micro.tsv  line-chart2.py  mongodb_macro.sh  mysql_macro.sh  mysql_macro_bar.sh  primary_lookup_micro.sh  primary_lookup_micro.tsv  range_search_micro.tsv  sensitivity_latency_dataset.tsv  sensitivity_query_selectivity.sh  sensitivity_query_selectivity.tsv  sensitivity_range_dimension.tsv  sensitivity_storage_dataset.tsv  storage_breakdown_osm.sh  storage_breakdown_osm.tsv  storage_breakdown_tpch.sh  storage_micro.tsv  throughput_osm.sh  throughput_osm.tsv
modules/: BuildOptions.cmake  JemallocExternal.cmake  OptimizeForArchitecture.cmake  ThriftExternal.cmake
old_results/: github_bench_log  github_storage_micro,SM  github_trinity  nyc_bench_log  nyc_storage_micro,SM  query_github_trinity_10D  query_github_trinity_timestamps  query_nyc_taxi_trinity  query_nyc_taxi_trinity copy  query_nyc_taxi_trinity_float_new  query_nyc_taxi_trinity_int  tpch_bench_log  tpch_storage_micro,SM  tpch_storage_microB,B  trinity_sync_insert
osm/: process_osm.py
plots/: aerospike_macro.tsv  bar-chart-query.py  bar-chart.py  insertion_micro.sh  line-chart.py  mongodb_macro.tsv  mysql_macro.tsv  mysql_macro_bar.tsv  range_search_micro.sh  range_search_micro.tsv  sensitivity_latency_dataset.sh  sensitivity_latency_dimension.sh  sensitivity_latency_dimension.tsv  sensitivity_range_dataset.sh  sensitivity_range_dataset.tsv  sensitivity_range_dimension.sh  sensitivity_storage_dataset.sh  sensitivity_storage_dimension.sh  sensitivity_storage_dimension.tsv  storage_breakdown_fs.tsv  storage_breakdown_tpch.tsv  storage_macro.sh  storage_macro.tsv  storage_micro.sh  storage_micro.tsv  throughput_fs.sh  throughput_fs.tsv
queries/: github_query  tpch_query  visualize_zipf.py  zipf_generator.py  zipf_generator_skew.py  zipf_generator_trinity.py
results/: github_aerospike  github_aerospike_timestamps  github_clickhouse  github_clickhouse_new  github_clickhouse_new_test  github_clickhouse_new_timestamps  github_phtree  github_rstar  github_timescale  github_timescale_final  github_timescale_timestamps  github_timescale_timestamps_tryout  github_trinity_micro  nyc_aerospike  nyc_aerospike_4T  nyc_clickhouse_4T  nyc_clickhouse_new  nyc_phtree  (+21 more)
(+1004 files in other folders)
